Fix bug 459113: bad replacement by Language Too

FIXED-IN: 22.08.2
BUG: 459113