kmail/grammarplugins/grammarcommon/grammarresulttextedit.cpp
@@ -93,10 +93,10 @@ void GrammarResultTextEdit::contextMenuEvent(QContextMenuEvent *event)
             if (!sugg.isEmpty()) {
                 popup->addSeparator();
                 QMenu *popupReplacement = popup->addMenu(i18n("Replacement"));
+                qDebug() << " act " << act;
                 for (const QString &str : sugg) {
                     QAction *actReplacement = popupReplacement->addAction(str);
                     connect(actReplacement, &QAction::triggered, this, [this, act, str]() {
-                        qDebug() << " act " << act;
                         slotReplaceWord(act, str);
                     });
                 }
